// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroCarousel stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  aria-label="Hero carousel with 3 slides"
  class="relative w-full overflow-hidden h-[400px] md:h-[500px] lg:h-[600px] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset"
  data-slot="hero-carousel"
  role="region"
  tabindex="0"
>
  <div
    aria-roledescription="carousel"
    class="relative w-full h-full [&_[data-slot=carousel-content]]:h-full [&_[data-slot=carousel-item]]:h-full"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex -ml-4 h-full"
        role="list"
        style="transform: translate3d(0px,0px,0px);"
      >
        <div
          aria-hidden="false"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 1"
                class="w-full h-full object-cover"
                fetchpriority="high"
                loading="eager"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    Welcome to Our Store
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    Discover amazing products
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/all"
                    >
                      Shop Now
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          inert=""
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 2"
                class="w-full h-full object-cover"
                fetchpriority="auto"
                loading="lazy"
                src="https://via.placeholder.com/1920x1080?text=Slide+2"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    New Collection
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    Latest seasonal styles
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/new"
                    >
                      Explore
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          inert=""
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 3"
                class="w-full h-full object-cover"
                fetchpriority="auto"
                loading="lazy"
                src="https://via.placeholder.com/1920x1080?text=Slide+3"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    Special Offers
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    Limited time deals
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/sale"
                    >
                      Shop Deals
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="absolute bottom-6 inset-x-0 z-30 section-container"
  >
    <div
      class="relative flex items-center justify-center"
    >
      <div
        aria-label="Slide navigation"
        class="flex gap-2"
        role="tablist"
      >
        <button
          aria-label="Go to slide 1 of 3"
          aria-selected="true"
          class="group flex items-center justify-center min-w-6 min-h-6 rounded-ui focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            aria-hidden="true"
            class="block rounded-ui transition-all duration-300 w-8 h-2 bg-white"
          />
        </button>
        <button
          aria-label="Go to slide 2 of 3"
          aria-selected="false"
          class="group flex items-center justify-center min-w-6 min-h-6 rounded-ui focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="block rounded-ui transition-all duration-300 w-2 h-2 bg-white/50 group-hover:bg-white/75"
          />
        </button>
        <button
          aria-label="Go to slide 3 of 3"
          aria-selected="false"
          class="group flex items-center justify-center min-w-6 min-h-6 rounded-ui focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="block rounded-ui transition-all duration-300 w-2 h-2 bg-white/50 group-hover:bg-white/75"
          />
        </button>
      </div>
      <div
        class="absolute right-0 flex gap-2"
      >
        <button
          aria-label="Pause carousel"
          class="rounded-ui p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pause w-6 h-6 text-primary-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="1"
              width="5"
              x="14"
              y="3"
            />
            <rect
              height="18"
              rx="1"
              width="5"
              x="5"
              y="3"
            />
          </svg>
        </button>
        <button
          aria-label="Previous slide (1 of 3)"
          class="rounded-ui p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-left w-6 h-6 text-primary-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <button
          aria-label="Next slide (1 of 3)"
          class="rounded-ui p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right w-6 h-6 text-primary-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  >
    Slide 
    1
     of 
    3
    : 
    Welcome to Our Store
  </div>
</div>
`;

exports[`HeroCarousel stories snapshot > EmptySlides story renders and matches snapshot 1`] = `
<div
  class="relative w-full flex items-center justify-center bg-muted h-[400px] md:h-[500px] lg:h-[600px]"
>
  <p
    class="text-muted-foreground text-sm"
  >
    No slides available
  </p>
</div>
`;

exports[`HeroCarousel stories snapshot > LongCopy story renders and matches snapshot 1`] = `
<div
  aria-label="Hero carousel with 3 slides"
  class="relative w-full overflow-hidden h-[400px] md:h-[500px] lg:h-[600px] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset"
  data-slot="hero-carousel"
  role="region"
  tabindex="0"
>
  <div
    aria-roledescription="carousel"
    class="relative w-full h-full [&_[data-slot=carousel-content]]:h-full [&_[data-slot=carousel-item]]:h-full"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex -ml-4 h-full"
        role="list"
        style="transform: translate3d(0px,0px,0px);"
      >
        <div
          aria-hidden="false"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 1"
                class="w-full h-full object-cover"
                fetchpriority="high"
                loading="eager"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    A Substantially Longer Editorial Headline That Tests How the Carousel Slide Handles Multi-Line Authored Content Across Responsive Breakpoints
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    A multi-sentence subtitle of the kind merchants actually author for seasonal campaign takeovers — exercises the slide overlay layout under realistic copy density.
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/all"
                    >
                      Shop Now
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          inert=""
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 2"
                class="w-full h-full object-cover"
                fetchpriority="auto"
                loading="lazy"
                src="https://via.placeholder.com/1920x1080?text=Slide+2"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    A Substantially Longer Editorial Headline That Tests How the Carousel Slide Handles Multi-Line Authored Content Across Responsive Breakpoints
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    A multi-sentence subtitle of the kind merchants actually author for seasonal campaign takeovers — exercises the slide overlay layout under realistic copy density.
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/new"
                    >
                      Explore
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          inert=""
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 3"
                class="w-full h-full object-cover"
                fetchpriority="auto"
                loading="lazy"
                src="https://via.placeholder.com/1920x1080?text=Slide+3"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    A Substantially Longer Editorial Headline That Tests How the Carousel Slide Handles Multi-Line Authored Content Across Responsive Breakpoints
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    A multi-sentence subtitle of the kind merchants actually author for seasonal campaign takeovers — exercises the slide overlay layout under realistic copy density.
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/sale"
                    >
                      Shop Deals
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="absolute bottom-6 inset-x-0 z-30 section-container"
  >
    <div
      class="relative flex items-center justify-center"
    >
      <div
        aria-label="Slide navigation"
        class="flex gap-2"
        role="tablist"
      >
        <button
          aria-label="Go to slide 1 of 3"
          aria-selected="true"
          class="group flex items-center justify-center min-w-6 min-h-6 rounded-ui focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            aria-hidden="true"
            class="block rounded-ui transition-all duration-300 w-8 h-2 bg-white"
          />
        </button>
        <button
          aria-label="Go to slide 2 of 3"
          aria-selected="false"
          class="group flex items-center justify-center min-w-6 min-h-6 rounded-ui focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="block rounded-ui transition-all duration-300 w-2 h-2 bg-white/50 group-hover:bg-white/75"
          />
        </button>
        <button
          aria-label="Go to slide 3 of 3"
          aria-selected="false"
          class="group flex items-center justify-center min-w-6 min-h-6 rounded-ui focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="block rounded-ui transition-all duration-300 w-2 h-2 bg-white/50 group-hover:bg-white/75"
          />
        </button>
      </div>
      <div
        class="absolute right-0 flex gap-2"
      >
        <button
          aria-label="Previous slide (1 of 3)"
          class="rounded-ui p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-left w-6 h-6 text-primary-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <button
          aria-label="Next slide (1 of 3)"
          class="rounded-ui p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right w-6 h-6 text-primary-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  >
    Slide 
    1
     of 
    3
    : 
    A Substantially Longer Editorial Headline That Tests How the Carousel Slide Handles Multi-Line Authored Content Across Responsive Breakpoints
  </div>
</div>
`;

exports[`HeroCarousel stories snapshot > PageDesignerMode story renders and matches snapshot 1`] = `
<div
  aria-label="Hero carousel with 3 slides"
  class="relative w-full overflow-hidden h-[400px] md:h-[500px] lg:h-[600px] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset"
  data-slot="hero-carousel"
  role="region"
  tabindex="0"
>
  <div
    aria-roledescription="carousel"
    class="relative w-full h-full [&_[data-slot=carousel-content]]:h-full [&_[data-slot=carousel-item]]:h-full"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex -ml-4 h-full"
        role="list"
        style="transform: translate3d(0px,0px,0px);"
      >
        <div
          aria-hidden="false"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 1"
                class="w-full h-full object-cover"
                fetchpriority="high"
                loading="eager"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    Welcome to Our Store
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    Discover amazing products
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/all"
                    >
                      Shop Now
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          inert=""
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 2"
                class="w-full h-full object-cover"
                fetchpriority="auto"
                loading="lazy"
                src="https://via.placeholder.com/1920x1080?text=Slide+2"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    New Collection
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    Latest seasonal styles
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/new"
                    >
                      Explore
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          inert=""
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 3"
                class="w-full h-full object-cover"
                fetchpriority="auto"
                loading="lazy"
                src="https://via.placeholder.com/1920x1080?text=Slide+3"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    Special Offers
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    Limited time deals
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/sale"
                    >
                      Shop Deals
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="absolute bottom-6 inset-x-0 z-30 section-container"
  >
    <div
      class="relative flex items-center justify-center"
    >
      <div
        aria-label="Slide navigation"
        class="flex gap-2"
        role="tablist"
      >
        <button
          aria-label="Go to slide 1 of 3"
          aria-selected="true"
          class="group flex items-center justify-center min-w-6 min-h-6 rounded-ui focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            aria-hidden="true"
            class="block rounded-ui transition-all duration-300 w-8 h-2 bg-white"
          />
        </button>
        <button
          aria-label="Go to slide 2 of 3"
          aria-selected="false"
          class="group flex items-center justify-center min-w-6 min-h-6 rounded-ui focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="block rounded-ui transition-all duration-300 w-2 h-2 bg-white/50 group-hover:bg-white/75"
          />
        </button>
        <button
          aria-label="Go to slide 3 of 3"
          aria-selected="false"
          class="group flex items-center justify-center min-w-6 min-h-6 rounded-ui focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="block rounded-ui transition-all duration-300 w-2 h-2 bg-white/50 group-hover:bg-white/75"
          />
        </button>
      </div>
      <div
        class="absolute right-0 flex gap-2"
      >
        <button
          aria-label="Pause carousel"
          class="rounded-ui p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pause w-6 h-6 text-primary-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="1"
              width="5"
              x="14"
              y="3"
            />
            <rect
              height="18"
              rx="1"
              width="5"
              x="5"
              y="3"
            />
          </svg>
        </button>
        <button
          aria-label="Previous slide (1 of 3)"
          class="rounded-ui p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-left w-6 h-6 text-primary-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <button
          aria-label="Next slide (1 of 3)"
          class="rounded-ui p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right w-6 h-6 text-primary-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  >
    Slide 
    1
     of 
    3
    : 
    Welcome to Our Store
  </div>
</div>
`;

exports[`HeroCarousel stories snapshot > Playground story renders and matches snapshot 1`] = `
<div
  aria-label="Hero carousel with 3 slides"
  class="relative w-full overflow-hidden h-[400px] md:h-[500px] lg:h-[600px] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset"
  data-slot="hero-carousel"
  role="region"
  tabindex="0"
>
  <div
    aria-roledescription="carousel"
    class="relative w-full h-full [&_[data-slot=carousel-content]]:h-full [&_[data-slot=carousel-item]]:h-full"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex -ml-4 h-full"
        role="list"
        style="transform: translate3d(0px,0px,0px);"
      >
        <div
          aria-hidden="false"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 1"
                class="w-full h-full object-cover"
                fetchpriority="high"
                loading="eager"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    Welcome to Our Store
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    Discover amazing products
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/all"
                    >
                      Shop Now
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          inert=""
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 2"
                class="w-full h-full object-cover"
                fetchpriority="auto"
                loading="lazy"
                src="https://via.placeholder.com/1920x1080?text=Slide+2"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    New Collection
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    Latest seasonal styles
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/new"
                    >
                      Explore
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          inert=""
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 3"
                class="w-full h-full object-cover"
                fetchpriority="auto"
                loading="lazy"
                src="https://via.placeholder.com/1920x1080?text=Slide+3"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    Special Offers
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    Limited time deals
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/sale"
                    >
                      Shop Deals
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="absolute bottom-6 inset-x-0 z-30 section-container"
  >
    <div
      class="relative flex items-center justify-center"
    >
      <div
        aria-label="Slide navigation"
        class="flex gap-2"
        role="tablist"
      >
        <button
          aria-label="Go to slide 1 of 3"
          aria-selected="true"
          class="group flex items-center justify-center min-w-6 min-h-6 rounded-ui focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            aria-hidden="true"
            class="block rounded-ui transition-all duration-300 w-8 h-2 bg-white"
          />
        </button>
        <button
          aria-label="Go to slide 2 of 3"
          aria-selected="false"
          class="group flex items-center justify-center min-w-6 min-h-6 rounded-ui focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="block rounded-ui transition-all duration-300 w-2 h-2 bg-white/50 group-hover:bg-white/75"
          />
        </button>
        <button
          aria-label="Go to slide 3 of 3"
          aria-selected="false"
          class="group flex items-center justify-center min-w-6 min-h-6 rounded-ui focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="block rounded-ui transition-all duration-300 w-2 h-2 bg-white/50 group-hover:bg-white/75"
          />
        </button>
      </div>
      <div
        class="absolute right-0 flex gap-2"
      >
        <button
          aria-label="Pause carousel"
          class="rounded-ui p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pause w-6 h-6 text-primary-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="1"
              width="5"
              x="14"
              y="3"
            />
            <rect
              height="18"
              rx="1"
              width="5"
              x="5"
              y="3"
            />
          </svg>
        </button>
        <button
          aria-label="Previous slide (1 of 3)"
          class="rounded-ui p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-left w-6 h-6 text-primary-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <button
          aria-label="Next slide (1 of 3)"
          class="rounded-ui p-3 bg-white/10 hover:bg-white/20 backdrop-blur-sm transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right w-6 h-6 text-primary-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  >
    Slide 
    1
     of 
    3
    : 
    Welcome to Our Store
  </div>
</div>
`;

exports[`HeroCarousel stories snapshot > SingleSlide story renders and matches snapshot 1`] = `
<div
  aria-label="Hero carousel with 1 slides"
  class="relative w-full overflow-hidden h-[400px] md:h-[500px] lg:h-[600px] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset"
  data-slot="hero-carousel"
  role="region"
  tabindex="0"
>
  <div
    aria-roledescription="carousel"
    class="relative w-full h-full [&_[data-slot=carousel-content]]:h-full [&_[data-slot=carousel-item]]:h-full"
    data-slot="carousel"
    role="region"
  >
    <div
      class="overflow-hidden"
      data-slot="carousel-content"
    >
      <div
        class="flex -ml-4 h-full"
        role="list"
        style="transform: translate3d(0px,0px,0px);"
      >
        <div
          aria-hidden="false"
          aria-roledescription="slide"
          class="min-w-0 shrink-0 grow-0 basis-full pl-4 h-full"
          data-slot="carousel-item"
          role="listitem"
        >
          <div
            class="relative w-full h-full overflow-hidden"
          >
            <div
              class="absolute inset-0 w-full h-full"
            >
              <img
                alt="Slide 1"
                class="w-full h-full object-cover"
                fetchpriority="high"
                loading="eager"
                src="https://via.placeholder.com/1920x1080?text=Slide+1"
              />
            </div>
            <div
              class="absolute inset-0 bg-[var(--hero-scrim)]"
            />
            <div
              class="relative h-full flex z-20 overflow-hidden items-center"
            >
              <div
                class="section-container w-full"
              >
                <div
                  class="max-w-xl mx-auto text-center"
                >
                  <h2
                    class="text-6xl font-bold leading-none [letter-spacing:-1.5px] text-primary-foreground mb-4"
                  >
                    Welcome to Our Store
                  </h2>
                  <p
                    class="text-lg font-normal leading-[120%] text-primary-foreground mb-8"
                  >
                    Discover amazing products
                  </p>
                  <div
                    class="flex justify-center"
                  >
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary hover:bg-primary/90 has-[>svg]:px-3 h-auto px-8 py-4 text-sm font-medium leading-5 text-primary-foreground"
                      data-size="default"
                      data-slot="button"
                      data-variant="default"
                      href="/category/all"
                    >
                      Shop Now
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  >
    Slide 
    1
     of 
    1
    : 
    Welcome to Our Store
  </div>
</div>
`;
